<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_credit_card"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/credit_card"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cheque"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        android:text="@string/cheque"
        app:layout_constraintEnd_toEndOf="@id/btn_credit_card"
        app:layout_constraintStart_toStartOf="@id/btn_credit_card"
        app:layout_constraintTop_toBottomOf="@id/btn_credit_card" />

    <Button
        android:id="@+id/btn_savings"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/savings"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_background"
        app:layout_constraintEnd_toEndOf="@id/btn_cheque"
        app:layout_constraintStart_toStartOf="@id/btn_cheque"
        app:layout_constraintTop_toBottomOf="@id/btn_cheque" />


    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:id="@+id/btn_cancel_transaction"
        android:layout_marginBottom="10dp"

        android:text="@string/txt_cancel_transactions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>