<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_amount_due"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="10dp"
        android:text="@string/total_amount_due"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_amount"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="8dp"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/txt_amount_due"
        app:layout_constraintStart_toStartOf="@id/txt_amount_due"
        app:layout_constraintTop_toBottomOf="@id/txt_amount_due" />


    <TextView
        android:id="@+id/card_insert_txt"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="8dp"
        android:text="@string/insert_your_card_txt"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/txt_amount"
        app:layout_constraintStart_toStartOf="@id/txt_amount"
        app:layout_constraintTop_toBottomOf="@id/txt_amount" />

    <ImageView
        android:id="@+id/card_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/card_insert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_insert_txt" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/cancel"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/card_img"
        app:layout_constraintStart_toStartOf="@id/card_img"

        />
</androidx.constraintlayout.widget.ConstraintLayout>